--- a/index.html
+++ b/index.html
@@ -112,9 +112,8 @@
         </div>
         <hr>
         <div>
-            <a class="fa fa-facebook" target="_blank"
-                href="https://www.facebook.com/UberEatsAPAC/?brand_redir=696009167187917"></a>
-            <a class="fa fa-twitter" target="_blank" href="https://www.instagram.com/ubereats/"></a>
+            <a class="fa fa-facebook" target="_blank" href="https://www.facebook.com/"></a>
+            <a class="fa fa-github" target="_blank" href="https://github.com/"></a>
         </div>
 
     </section>
