--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <p> healthy and delicious food for you!</p><br><br>
             <a class="food-button" target="_blank" href="https://github.com/">Order Food</a>
         </div>
-        <div class="half-width2">
+        <div class="another-half-width">
             <img src="images/female/Group 8425.png" alt="">
         </div>
     </section>
@@ -43,45 +43,42 @@
             <br>
             <br>
             <h2>About Me</h2>
-            <p style="font-size: 35px;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui deserunt ex ipsam
-                mollitia ducimus corrupti
-                a enim saepe. Consequuntur repellat voluptatem eos quae animi aliquam, molestias fuga ea necessitatibus
-                numquam.</p>
+            <p style="font-size: 35px;">Chefs and Cooks sharing cooking techniques, recipes and ideas with people who
+                share similar interests or concerns and who interact and remain in contact for mutual assistance or
+                support</p>
             <br>
             <br>
             <br>
             <br>
-            <a class="food-button" target="_blank" href="https://github.com">Contact Me</a>
+            <a class="food-button" target="_blank" href="https://github.com">Contact me</a>
         </div>
     </section>
     <h1 style="font-size: 50px; text-align: center;">My Recipies</h1>
-    <h3>I love food.i love kacci biriyni</h3>
-    <h3>I also love pizzza and burger</h3>
+    <h3>Our Best Cauliflower Recipes</h3>
+    <h3>Carnival Treats You Can Make at Home</h3>
     <h3>Pizza</h3>
     <section>
         <div class=" sec">
             <div class="second-div">
                 <img class="pic" src="images/food/Project Cover1.jpg" alt="">
                 <h1 style="font-size: 45px; padding-left: 5%;">Recipie Title</h1>
-                <p style="padding-left: 5%;">I love food.i love kacci biriyni.<br> I love food.i love kacci
-                    biriyni.<br>I love food.i love kacci
-                    biriyni</p>
+                <p style="padding-left: 5%;">Food is any substance consumed<br>provide nutritional support<br>Food is
+                    usually of plant</p>
             </div>
 
             <div class="second-div">
                 <img class="pic" src="images/food/Project Cover.jpg" alt="">
                 <h1 style="font-size: 45px; padding-left: 5%;">Recipie Title</h1>
-                <p style="padding-left: 5%;">I love food.i love kacci biriyni.<br>I love food.i love kacci biriyni.<br>
-                    I love food.i love kacci
-                    biriyni</p>
+                <p style="padding-left: 5%;">Food is any substance consumed<br>provide nutritional support<br>
+                    Food is
+                    usually of plant</p>
             </div>
 
             <div class="second-div">
                 <img class="pic" src="images/food/Project Cover.png" alt="">
                 <h1 style="font-size: 45px; padding-left: 5%;">Recipie Title</h1>
-                <p style="padding-left: 5%;">I love food.i love kacci biriyni.<br>I love food.i love kacci biriyni<br>I
-                    love food.i love kacci
-                    biriyni</p>
+                <p style="padding-left: 5%;">Food is any substance consumed<br>provide nutritional support<br>Food is
+                    usually of plant</p>
             </div>
 
         </div>
